<resources>
    <string name="app_name">Todo</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_a_task">Add a task</string>
    <string name="search">Search</string>
    <string name="do_search">Do search</string>
    <string name="more">More</string>
    <string name="more_options">More options</string>
    <string name="choose_workspace">Choose Workspace</string>
    <string name="create_task">Create task</string>
    <string name="example_action">Book a call, make an appointment…</string>
    <string name="set_due_date">Due date</string>
    <string name="save">Save</string>
    <string name="workspaces">Workspaces</string>
    <string name="edit_workspaces">Edit Workspaces</string>
    <string name="add_workspace">Add Workspace</string>
    <string name="delete_task">Delete Task</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="next_week">Next Week</string>
    <string name="tonight">Tonight</string>
    <string name="sort">Sort</string>
    <string name="archive">Archive</string>
    <string name="some_description">type description…</string>
    <string name="pick_color">Pick color</string>
    <string name="apply">Apply</string>
    <string name="due_date_ascending">Due Date (Furthest)</string>
    <string name="due_date_descending">Due Date (Nearest)</string>
    <string name="created_date_ascending">Created Date (Oldest)</string>
    <string name="created_date_descending">Created Date (Latest)</string>
    <string name="last_modified_date_ascending">Last Modified Date (Oldest)</string>
    <string name="last_modified_date_descending">Last Modified Date (Latest)</string>
    <string name="created">Created: %1$s</string>
    <string name="last_modified">Last Modified: %1$s</string>
    <string name="pick_a_date_and_time">Pick a date and time</string>
    <string name="set">SET</string>
    <string name="cancel">Cancel</string>
    <string name="view_archived">View Archived</string>
    <string name="make_task_done">Make task done</string>
    <string name="archive_task">Archive task</string>
    <string name="save_changes">Save changes</string>
    <string name="do_you_want_to_save_changes">Do you want to save changes?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="add_a_subtask">Add a subtask</string>
    <string name="edit_workspace">Edit Workspace</string>
    <string name="workspace_name">Workspace Name</string>
    <string name="select_color_for_workspace">Select Color for Workspace</string>
    <string name="set_time">Set Time</string>
    <string name="subtasks">Subtasks</string>
    <string name="add_a_tag">Add a tag</string>
    <string name="custom">Custom</string>
    <string name="set_notification">Set Notification</string>
    <string name="choose_color">Choose color</string>
    <string name="edit_tags">Edit tags</string>
    <string name="feature_not_available">Sorry 😭, this feature is not available</string>
    <string name="color">color</string>
    <string name="set_repeat">Set repeat</string>
    <string name="delete_all">Delete All</string>
    <string name="task_deleted">Task deleted</string>
    <string name="unarchive">Unarchive</string>
    <string name="delete">Delete</string>
    <string name="restore">Restore</string>
    <string name="task_archived_msg">Task archived</string>
    <string name="edit_workspace_helper">Do long click on item to edit</string>
    <string name="clear">clear</string>
    <string name="default_workspace_name">default</string>
    <string name="welcome_text">Such a lazy hooman :v</string>
</resources>