<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/due_date_inc"
        android:title="@string/due_date_ascending"
        android:icon="@drawable/deadline" />
    <item
        android:id="@+id/due_date_dec"
        android:title="@string/due_date_descending"
        android:icon="@drawable/deadline" />
    <item
        android:id="@+id/created_date_inc"
        android:icon="@drawable/draft"
        android:title="@string/created_date_ascending" />
    <item
        android:id="@+id/created_date_dec"
        android:icon="@drawable/draft"
        android:title="@string/created_date_descending" />
    <item
        android:id="@+id/last_modified_date_inc"
        android:title="@string/last_modified_date_ascending"
        android:icon="@drawable/modify" />
    <item
        android:id="@+id/last_modified_date_dec"
        android:title="@string/last_modified_date_descending"
        android:icon="@drawable/modify" />
</menu>