<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/bt_back"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_workspace"
            android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Caption"
            app:icon="@drawable/ic_baseline_keyboard_arrow_left_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/bt_save"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Button"
            app:layout_constraintBottom_toBottomOf="@id/bt_choose_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/bt_choose_color" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_layout_workspace_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            app:boxBackgroundColor="@android:color/transparent"
            app:layout_constraintStart_toStartOf="@id/bt_back"
            app:layout_constraintTop_toBottomOf="@id/bt_back">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_workspace_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/workspace_name"
                android:inputType="textCapSentences|textShortMessage"
                android:minHeight="64dp"
                android:paddingStart="0dp"
                android:paddingTop="32dp"
                android:paddingEnd="0dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/bt_delete"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/delete"
            android:visibility="gone"
            app:layout_constraintEnd_toStartOf="@id/bt_save"
            app:layout_constraintTop_toTopOf="@id/bt_save" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/bt_choose_color"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/color"
            app:icon="@drawable/ic_baseline_palette_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_layout_workspace_name" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>