<?xml version="1.0" encoding="utf-8"?>
<layout>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <View
            android:id="@+id/fixed_handle"
            android:layout_width="40dp"
            android:layout_height="4dp"
            android:background="@drawable/bg_drag_handle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/et_title"
            style="@style/TextAppearance.MdcTypographyStyles.Body1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="@android:color/transparent"
            android:hint="@string/example_action"
            android:inputType="textCapSentences"
            android:maxLines="1"
            android:paddingHorizontal="8dp"
            android:paddingVertical="16dp"
            android:textColorHint="#4E4E4E"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fixed_handle"
            tools:ignore="Autofill">

        </EditText>

        <HorizontalScrollView
            android:id="@+id/linear_bt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="none"
            android:paddingStart="8dp"
            android:paddingEnd="0dp"
            android:layout_marginEnd="96dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_title">

            <com.google.android.material.chip.ChipGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <com.google.android.material.chip.Chip
                    android:id="@+id/bt_set_due_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/set_due_date"
                    android:text="@string/set_due_date"
                    app:chipIcon="@drawable/ic_baseline_access_time_24" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/bt_set_workspace"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/choose_workspace"
                    android:text="@string/workspaces"
                    app:chipIcon="@drawable/ic_baseline_folder_open_24" />
            </com.google.android.material.chip.ChipGroup>
        </HorizontalScrollView>

        <com.google.android.material.button.MaterialButton
            android:layout_marginTop="8dp"
            android:id="@+id/bt_submit"
            android:insetTop="0dp"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/linear_bt"
            app:layout_constraintBottom_toBottomOf="@id/linear_bt" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>