<?xml version="1.0" encoding="utf-8"?>
<layout>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/list_item_spacing">

        <View
            android:id="@+id/fixed_handle"
            android:layout_width="40dp"
            android:layout_height="4dp"
            android:background="@drawable/bg_drag_handle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/fixed_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingVertical="8dp"
            android:paddingStart="8dp"
            android:paddingEnd="0dp"
            android:text="@string/workspaces"
            android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Caption"
            android:textColor="?attr/colorPrimary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fixed_handle" />

        <ImageButton
            android:id="@+id/bt_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:contentDescription="@string/add_workspace"
            android:padding="8dp"
            android:src="@drawable/ic_baseline_add_24"
            app:layout_constraintBottom_toBottomOf="@id/fixed_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/fixed_title"
            app:tint="?attr/colorPrimary" />

        <ImageButton
            android:id="@+id/bt_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:contentDescription="@string/edit_workspaces"
            android:padding="8dp"
            android:src="@drawable/ic_baseline_edit_24"
            app:layout_constraintBottom_toBottomOf="@id/fixed_title"
            app:layout_constraintEnd_toStartOf="@id/bt_add"
            app:layout_constraintTop_toTopOf="@id/fixed_title"
            app:tint="?attr/colorPrimary" />

        <androidx.recyclerview.widget.RecyclerView
            android:layout_marginTop="8dp"
            android:id="@+id/rv_workspace"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fixed_title"
            app:spanCount="2"
            tools:listitem="@layout/item_card_workspace" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>