<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.task.DetailTaskFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="16dp"
            android:paddingTop="32dp"
            android:paddingBottom="64dp">

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_workspace"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:chipIcon="@drawable/ic_baseline_folder_open_24"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="default" />

            <EditText
                android:id="@+id/et_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:ellipsize="end"
                android:hint="@string/example_action"
                android:importantForAutofill="no"
                android:inputType="textShortMessage"
                android:paddingTop="8dp"
                android:scrollHorizontally="false"
                android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Headline5"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/chip_workspace"
                app:layout_constraintTop_toBottomOf="@id/chip_workspace"
                tools:text="Đi mua sữa ở nhà bạn" />

            <EditText
                android:id="@+id/et_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="@string/some_description"
                android:importantForAutofill="no"
                android:inputType="textMultiLine"
                android:paddingTop="4dp"
                android:imeOptions="actionDone"
                android:paddingBottom="16dp"
                android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Body1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/chip_workspace"
                app:layout_constraintTop_toBottomOf="@id/et_title" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_due_date_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@id/chip_workspace"
                app:layout_constraintTop_toBottomOf="@id/et_description"
                tools:text="20:10 12/12/2020" />


            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chip_group_tags"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="@id/chip_workspace"
                app:layout_constraintTop_toBottomOf="@id/chip_due_date_time">

                <com.google.android.material.chip.Chip
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_a_tag"
                    app:chipIcon="@drawable/ic_baseline_add_24" />
            </com.google.android.material.chip.ChipGroup>

            <TextView
                android:id="@+id/fixed_subtasks_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:paddingHorizontal="8dp"
                android:text="@string/subtasks"
                app:layout_constraintStart_toStartOf="@id/chip_workspace"
                app:layout_constraintTop_toBottomOf="@id/chip_group_tags" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="@color/light_gray"
                app:layout_constraintBottom_toBottomOf="@id/fixed_subtasks_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/fixed_subtasks_title"
                app:layout_constraintTop_toTopOf="@id/fixed_subtasks_title" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_subtasks"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:overScrollMode="never"
                android:paddingVertical="8dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintStart_toStartOf="@id/chip_workspace"
                app:layout_constraintTop_toBottomOf="@id/fixed_subtasks_title"
                tools:itemCount="5"
                tools:listitem="@layout/item_subtask" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/light_gray"
                app:layout_constraintStart_toStartOf="@id/chip_workspace"
                app:layout_constraintTop_toBottomOf="@id/rv_subtasks" />

            <TextView
                android:id="@+id/tv_created_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="@id/chip_workspace"
                app:layout_constraintTop_toBottomOf="@id/rv_subtasks"
                tools:text="Created: 12/12/2020" />

            <TextView
                android:id="@+id/tv_modified_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@id/chip_workspace"
                app:layout_constraintTop_toBottomOf="@id/tv_created_date"
                tools:text="Last Modified: 12/12/2020" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>